wp-content/universal-assets/v1/scss/universal-nav.scss
/* ... */
body.event-espresso .site-header-custom{
   .login-section .dropdown-menu .dropdown-links {
       .menu-item-event-cart {
           display: block;
       }
   }
}

body:not(.buddyboss-theme) {
    .login-section {
        .dropdown-links {
            display: none;
        }
    }
}
body.buddyboss-theme {
    .site-header-custom {
        width: 100% !important;
        left: 0px;
    }
    .buddypanel {
        margin-top: 121px;
        z-index: 9;
		margin-left:-220px;
    }
	#page.site {
		margin-left: 0px;
	}
	&.buddypanel-open.bb-page-loaded, &.buddypanel-open.buddypanel-closed.bb-page-loaded {
		.buddypanel { margin-left: 0px }
		#page.site {
			margin-left: 220px;
		}
		@media screen and (max-width: 805px) {
			#page.site { margin-left: 0px; }
		}
		@media screen and (min-width: 805px) {
			#makey-sign {
				margin-left: 180px;
				&:hover {
					margin-left: 200px;
				}
			}
		}
	}
	&.buddypanel-closed.bb-page-loaded {
		.buddypanel { margin-left: 0px; }
		#page.site {
			margin-left: 68px;
			@media screen and (max-width: 805px) {
				margin-left: 0px;
			}
		}
	}
}

body.mobile-nav {
    @media screen and (max-width: 805px) {
        overflow: hidden;
        #navbar-collapse { display: none; }
    }
}

.nav-separator {
    background: rgba(0,0,0,.1);
    height: 28px;
    max-height: 28px;
    width: 1px;
    display: inline-block;
    margin: 0 12px 0 12px;
    padding: 0;
    vertical-align: middle;
}

// SEARCH related stuff //
#search-modal, #sb-search {
    display: none;
}

.makezine, .makercamp {
    #sb-search {
        display: block;
    }
}

.fancybox-overlay {
    background: #333;
    opacity: .95;
    width: 100vw !important;
    height: 100vh !important;
    position: fixed;
    top: 0px;
}
.fancybox-wrap.search-modal-wrapper .fancybox-skin{
    background: transparent;
    box-shadow: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    .sb-search-label {
        color: #fff;
        display: block;
        font-size: 62px;
        font-family: "Roboto-Light";
        text-align:center;
        margin-bottom: 30px;
    }
    .search-form {
        min-width: 620px;
		@media (max-width: 767px) {
			min-width: 100%;
		}
        label { font-weight: 300; }
        .sb-search-input {
            background: transparent;
            color: #fff;
            border: 0px;
            border-bottom: solid white 1px;
            outline-width: 0;
            font-weight: normal;
            width: 475px;
            margin-right: 20px;
            text-align: center;
            padding-bottom: 8px;
            &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
                color: #fff;
                opacity: 1; /* Firefox */
            }
            &:-ms-input-placeholder { /* Internet Explorer 10-11 */
                color: #fff;
            }
            &::-ms-input-placeholder { /* Microsoft Edge */
                color: #fff;
            }
            @media (max-width: 767px) {
                width: 100%;
            }
        }
        .sb-search-submit {
            background: #eb002a;
            border: none;
            border-radius: 20px;
            padding: 8px 25px;
            color: #fff;
            font-weight: normal;
            font-size: 22px;
            margin-top: -5px;
            height: 50px;
			@media screen and (max-width: 767px) {
				margin-top: 20px;
				width: 90%;
				margin-left: 5%;
				margin-right: 5%;
			}
        }
    }
    #popular-links {
        width: 340px;
        margin: 40px auto 0px;
        text-align: center;
        h5 {
            color: #fff;
            font-family: "Roboto-Light";
            font-size: 18px;
            font-weight: normal;
        }
        ul.pop-links-list {
            float: left;
            text-align: left;
            margin-left: 20px;
            &:last-child { float: right; }
            li {
                padding: 10px;
                list-style: none;
                a {
                    color: #ED1C24;
                    opacity: .9;
                    &:hover { opacity: 1; }
                }
            }
        }
    }
    .fancybox-close {
        background: none;
        color: #fff;
        font-size: 30px;
        margin-top: -30px;
        margin-right: 15px;
        font-family: Tahoma;
        position: absolute;
        top: 50px;
        right: 0px;
        &:before {
            content: "x";
        }
        @media (max-width: 767px) {
            margin-top: -50px;
        }
    }
}
/* ... */

